GNOME Bugzilla – Bug 614924
suncc does not allow zero sized array
Last modified: 2010-04-06 17:07:15 UTC
I'm building libgda master code with suncc under OpenSolaris. Same error happens to tools/browser/data-manager/data-console.c tools/browser/query-exec/query-console.c tools/browser/schema-browser/table-preferences.c $ make [...] "table-preferences.c", line 74: zero or negative subscript "table-preferences.c", line 74: warning: syntax error: empty initializer "table-preferences.c", line 113: warning: argument #6 is incompatible with prototype: prototype: pointer to void : "/usr/include/glib-2.0/gobject/gsignal.h", line 385 argument : pointer to function(void) returning void "table-preferences.c", line 766: warning: argument #6 is incompatible with prototype: prototype: pointer to void : "/usr/include/glib-2.0/gobject/gsignal.h", line 371 argument : pointer to function(void) returning void "table-preferences.c", line 780: warning: argument #6 is incompatible with prototype: prototype: pointer to void : "/usr/include/glib-2.0/gobject/gsignal.h", line 378 argument : pointer to function(void) returning void cc: acomp failed for table-preferences.c make[3]: *** [table-preferences.lo] Error 1 make[3]: Leaving directory `/export/home/halton/work/projects/gnome/libgda/libgda/tools/browser/schema-browser'
Created attachment 158018 [details] [review] patch for bug #614924
It's now in git/master, thanks!