Do not assign zero sized array.

From Halton Huo <halton.huo@sun.com>
Fixes https://bugzilla.gnome.org/show_bug.cgi?id=614924