tools/browser/data-manager/data-console.c
@@ -71,6 +71,7 @@ static const gchar         *data_console_page_get_actions_ui (BrowserPage *page)
 static GtkWidget           *data_console_page_get_tab_label (BrowserPage *page, GtkWidget **out_close_button);
 
 enum {
+	DUMMY,
 	LAST_SIGNAL
 };
 
